@@ -1,4 +1,4 @@
-AC_INIT([genius], [1.0.18])
+AC_INIT([genius], [1.0.19])
 AC_CONFIG_SRCDIR([src/calc.c])
 AM_INIT_AUTOMAKE([dist-xz])
 
