@@ -1,3 +1,12 @@
+Tue Sep 02 00:58:58 2014  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: Add SurfacePlotDrawLine, SurfacePlotDrawPoints, and
+	  SurfacePlotClear
+
+	* help/C/genius.xml: Add documentation for the above functions
+
+	* src/graphing.c: Add rotate animation
+
 Sat Aug 30 17:10:23 2014  Jiri (George) Lebl <jirka@5z.com>
 
 	* help/C/genius.xml: fix spelling, update grant info
